# Mediasoup.SFU

./: .gitignore  APPLINK_FIX.md  CMakeLists.txt  README.md  README_CN.md  diagnose.bat  gen_config.bat  genfbs.bat  genvs2026.bat  run_sfu_debug.bat  run_sfu_release.bat
controller/: CMakeLists.txt  worker_controller.cpp
sfu/: CMakeLists.txt
sfu/src/: app.cpp
worker/: CMakeLists.txt
